--- a/pages/explore.html
+++ b/pages/explore.html
@@ -51,9 +51,12 @@
                 </section>
                 <table>
                     <tr>
-                        <td width="72%" rowspan="2">
-                            <h2>Explore Dubai</h2>
-                            <p>Located on the southern shore of the Arabian Gulf, Dubai is the
+                        <td><h2>Explore Dubai</h2></td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><p>Located on the southern shore of the Arabian Gulf, Dubai is the
                                 second-largest of the seven Emirates that make up the United Arab Emirates.
                                 This thriving metropolis of over two million residents features architecture
                                 and attractions that rival the best that the rest of the world has to offer. </p>
@@ -77,27 +80,23 @@
                                 <li><strong><a
                                             href="http://www.tripadvisor.com/Attraction_Review-g295424-d1936354-Reviews-Dubai_Fountains-Dubai_Emirate_of_Dubai.html">Dubai
                                             Fountain</a></strong> shoots water up to 500 feet high as music plays during
-                                    daily performances on the Burj Khalifa Lake.</li>
+                                    daily performances on the Burj Khalifa Lake. </li>
                                 <li><strong><a
                                             href="http://www.tripadvisor.com/Attraction_Review-g295424-d1792285-Reviews-Dubai_Aquarium_Underwater_Zoo-Dubai_Emirate_of_Dubai.html">Dubai
                                             Aquarium &amp; Underwater Zoo</a></strong> one of the largest tanks in the
                                     world, is home to more than 33,000 animals and sea creatures you can examine
                                     from inside its acrylic walk-through tunnel.</li>
                             </ul></td>
-                        <td>&nbsp;</td>
                         <td><p>&nbsp;</p></td>
                     </tr>
                     <tr>
-                        <td width="7%">&nbsp;</td>
-                        <td width="21%">&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                        <td width="22%">&nbsp;</td>
                     </tr>
                 </table>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
@@ -118,6 +117,7 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+            <!-- #EndLibraryItem -->
+        </div>
     </body>
 </html>
