--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -56,7 +56,14 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td class="blocks"><p><strong>Mobile banking: New technologies that improve the customer experience</strong><br>
+                        <td class="blocks ribron"><h3>Mobile banking</h3>
+                        <td>&nbsp;</td>
+                        <td class="blocks ribron"><h3>&lt;tile ad&gt;</h3></td>
+                        <td>&nbsp;</td>
+                        <td class="blocks ribron"><h3>Risk management</h3></td>
+                    </tr>
+                    <tr>
+                        <td class="blocks"><p><strong> New technologies that improve the customer experience</strong><br>
                                 <strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 pm to 5:00 pm</strong><br>
                                 <strong>Conference room 3 - CR3</strong><br>
@@ -81,7 +88,7 @@
                                 new leaders need to embrace and how is that
                                 different from the past?</p></td>
                         <td>&nbsp;</td>
-                        <td class="blocks"><p><strong>Risk management: From grapple to grip</strong><br>
+                        <td class="blocks"><p><strong> From grapple to grip</strong><br>
                                 <strong>Wednesday, September 18</strong><br>
                                 <strong>2:00 pm to 3:00 pm</strong><br>
                                 <strong>Conference room 1 - CR1 </strong><br>
@@ -144,7 +151,8 @@
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE
                 </div>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
@@ -165,6 +173,9 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+            <!-- #EndLibraryItem -->
+        </div>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
     </body>
 </html>
