--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -80,19 +80,17 @@
                         <td class="blocks mini">
                             <p>
                                 <a class="popup vid" data-title="kennedy_vid"
-                                   href="../media/SIBOS2013-MikeKennedy.mp4"> Watch intro video <br>
-                                    <img src="../images/photos/kennedy_thumb.png" alt="" width="230" height="156">
-                                </a>
-                            </p>
+                                   href="../media/SIBOS2013-MikeKennedy.mp4">
+                                    <img src="../images/photos/kennedy_thumb.png" alt="" width="230" height="156"></a> &nbsp;
+                                <strong> Watch intro video </strong></p>
                         </td>
                         <td>&nbsp;</td>
                         <td class="blocks mini">
                             <p>
                                 <a class="popup vid" data-title="lickiss_vid"
-                                   href="../media/SIBOS2013-TomLickiss.mp4"> Watch intro video <br>
-                                    <img src="../images/photos/lickiss_thumb.png" alt="" width="230" height="156">
-                                </a>
-                            </p>
+                                   href="../media/SIBOS2013-TomLickiss.mp4">
+                                    <img src="../images/photos/lickiss_thumb.png" alt="" width="230" height="156"></a> &nbsp;
+                                <strong> Watch intro video </strong></p>
                         </td>
                     </tr>
                     <tr>
@@ -105,7 +103,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td width="50%"></td>
+                        <td width="50%">&nbsp;</td>
                         <td width="1%">&nbsp;</td>
                         <td width="50%">&nbsp;</td>
                     </tr>
@@ -128,7 +126,7 @@
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
             <div class="popup">
-                <video id="kennedy_vid" class="video-js vjs-default-skin" controls preload="0" width="960" height="540" poster="">
+                <video id="kennedy_vid" class="video-js vjs-default-skin" controls preload="" width="960" height="540" poster="">
                     <source src="../media/SIBOS2013-MikeKennedy.mp4"  type="video/mp4">
                     <source src="../media/SIBOS2013-MikeKennedy.ogv"  type="video/ogg">
                     <source src="../media/SIBOS2013-MikeKennedy.webm" type="video/webm">
