--- a/pages/giving.html
+++ b/pages/giving.html
@@ -82,11 +82,38 @@
                             <div class="tofix">
                                 <table>
                                     <tr>
+                                        <td class="blocks mini">
+                                            <h3 class="chev"><span>FINAL TOTALS</span></h3>
+                                            <table>
+                                                <tr>
+                                                    <td><p><em>Dubai Center for Special Needs</em><br>
+                                                            68 votes (37%)<br>
+                                                            <strong>$3,696.22</strong></p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>American   Refugee Committee</em><br>
+                                                            54 votes (29%)<br>
+                                                            <strong>$2,934.59 </strong></p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>Project   Vietnam Foundation</em><br>
+                                                            37 votes (20%)<br>
+                                                            <strong>$1,976.76 </strong></p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>The   Bread Tin</em><br>
+                                                            26 votes (14%)<br>
+                                                            <strong>$1,392.43 </strong></p></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td class="blocks mini"><h3 class="chev"><span>learn more</span></h3>
                                             <p><strong>Click on each nonprofit to learn more:</strong></p>
                                             <ul>
                                                 <li><a class="scroll" href="#bread">The Bread Tin</a> is
-                                                    a new giving club that teaches young professionals about philanthropy in London </li>
+                                                a new giving club that teaches young professionals about philanthropy in London </li>
                                                 <li><a class="scroll" href="#arc">American Refugee Committee</a> helps
                                                     victims of war and civil conflict rebuild their lives in seven countries around the world </li>
                                                 <li><a class="scroll" href="#dcfsn">Dubai Center for Special Needs</a> provides
